Kubernetes/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-server
  template:
    metadata:
      labels:
        app: main-server
    spec:
      containers:
        - name: express-server-container
          image: kodr_express:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
