Kubernetes/main-server-service.yml
kind: Service
apiVersion: v1
metadata:
  name: main-server-service
spec:
  selector:
    app: main-server
  type: ClusterIP
  ports:
    - name: main-server-http
      port: 3000
      targetPort: 3000
